k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: janus-gateway
  labels:
    name: janus-gateway
